# learning_snake

./: CMakeLists.txt
include/: Clock.hh  Enums.hh  Game.hh  Head.hh  Map.hh  Node.hh  Point2D.hh  Snake.hh  State.hh  Transition.hh  Window.hh  utils.hh
include/agents/: Agent.hh  astar.hh
python/: gamegen.py  setup.py
src/: Clock.cc  Game.cc  Head.cc  Map.cc  Node.cc  Point2D.cc  Snake.cc  Window.cc  main.cc  utils.cc
src/agents/: Agent.cc  astar.cc
